--- a/espo-crm/espo-init.yaml
+++ b/espo-crm/espo-init.yaml
@@ -1,20 +1,2 @@
 #cat << EOF | tee /mnt/pve/files-storage/snippets/vendor.yaml
-#cloud-config
-users:
-  - default
-
-packages:
-  - wget
-
-runcmd:
-  - apt update
-  - apt upgrade -y
-  - apt install -y qemu-guest-agent
-  - systemctl start qemu-guest-agent
-  - wget -O /tmp/espo-crm_install.sh https://raw.githubusercontent.com/Suiding007/SDI-Cloud-morpheus/refs/heads/main/espo-crm/espo-crm_install.sh
-  - chmod +x /tmp/espo-crm_install.sh
-  - /tmp/espo-crm_install.sh
-
-
-
- 
+#improved by chatgpt
